[package]
name = "discord-download"
description = "A tool to quickly download all Discord CDN attachments you've sent using your Discord data package"
authors = ["Maow"]
license = "MIT"
repository = "https://github.com/maow-tty/discord-download"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
rayon = "1.8.0"
glob = "0.3.1"
csv = "1.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
indicatif = "0.17.7"